--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,6 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/**
 # !tools/packages.config
+
+# Azure Service Fabric Package folder
+pkg/
